==> espi3000/estacker_app_soc_nrf52/src/vl53l1_platform.c <==

/* 
* This file is part of VL53L1 Platform 
* 
* Copyright (c) 2016, STMicroelectronics - All Rights Reserved 
* 
* License terms: BSD 3-clause "New" or "Revised" License. 
* 
* Redistribution and use in source and binary forms, with or without 
* modification, are permitted provided that the following conditions are met: 
* 
* 1. Redistributions of source code must retain the above copyright notice, this 
* list of conditions and the following disclaimer. 
* 
* 2. Redistributions in binary form must reproduce the above copyright notice, 
* this list of conditions and the following disclaimer in the documentation 
* and/or other materials provided with the distribution. 
* 
* 3. Neither the name of the copyright holder nor the names of its contributors 
* may be used to endorse or promote products derived from this software 
* without specific prior written permission. 
* 
* THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" 
* AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE 
* IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE 
* DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE 
* FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL 
* DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR 
* SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER 
* CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, 
* OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE 
* OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
* 
*/


#include "vl53l1_platform.h"
#include "sensors.h"
#include <string.h>
#include <time.h>
#include <math.h>

extern const struct i2c_dt_spec dev_i2c_tof;


int8_t VL53L1_WriteMulti(uint16_t dev, uint16_t index, uint8_t *pdata, uint32_t count) {
	uint32_t num_bytes = count*4 +2;
	uint8_t buf[num_bytes];
	buf[0] = index >> 8;
	buf[1] = index;
	buf[2] = pdata;
	if (i2c_write_dt(&dev_i2c_tof, &buf, num_bytes)){
		return 1;
	}
	
	return 0; // to be implemented
}

int8_t VL53L1_ReadMulti(uint16_t dev, uint16_t index, uint8_t *pdata, uint32_t count){
	uint16_t reg;
	reg = (index>>8) | (index<<8);
	if (i2c_write_read_dt(&dev_i2c_tof, &reg, 2, pdata, count)){
		return 1;
	}
	return 0; // to be implemented
}

int8_t VL53L1_WrByte(uint16_t dev, uint16_t index, uint8_t data) {
	uint8_t buf[3];
	buf[0] = index >> 8;
	buf[1] = index;
	buf[2] = data;
	if (i2c_write_dt(&dev_i2c_tof, &buf, 3)){
		return 1;
	}
	return 0; // to be implemented
}

int8_t VL53L1_WrWord(uint16_t dev, uint16_t index, uint16_t data) {
	uint8_t buf[4];
	buf[0] = index >> 8;
	buf[1] = index;
	buf[2] = data >> 8;
	buf[3] = data;

	if (i2c_write_dt(&dev_i2c_tof, &buf, 4)) {
		return 1;
	}
	return 0; // to be implemented
}

int8_t VL53L1_WrDWord(uint16_t dev, uint16_t index, uint32_t data) {
	uint8_t buf[6];
	buf[0] = index >> 8;
	buf[1] = index;
	buf[2] = data >> 24;
	buf[3] = data >> 16;
	buf[4] = data >> 8;
	buf[5] = data;
	if (i2c_write_dt(&dev_i2c_tof, &buf, 6)){
		return 1;
	}
	return 0; // to be implemented
}

int8_t VL53L1_RdByte(uint16_t dev, uint16_t index, uint8_t *data) {
	uint16_t reg;
	reg = (index>>8) | (index<<8);
	if (i2c_write_read_dt(&dev_i2c_tof, &reg, 2, data, 1)){
		return 1;
	}
	return 0; // to be implemented
}

int8_t VL53L1_RdWord(uint16_t dev, uint16_t index, uint16_t *data) {
	uint16_t reg;
	uint16_t RX;
	reg = (index>>8) | (index<<8);
	if (i2c_write_read_dt(&dev_i2c_tof, &reg, 2, &RX, 2)){
		return 1;
	}
	RX = (RX>>8) | (RX<<8);
	*data = RX;
	return 0; // to be implemented
}

int8_t VL53L1_RdDWord(uint16_t dev, uint16_t index, uint32_t *data) {
	uint16_t reg;
	reg = (index>>8) | (index<<8);
	if (i2c_write_read_dt(&dev_i2c_tof, &reg, 2, data, 4)){
		return 1;
	}
	return 0; // to be implemented
}

int8_t VL53L1_WaitMs(uint16_t dev, int32_t wait_ms){
	k_msleep(wait_ms);
	return 0; // to be implemented
}
